[package]
name = "pngme"
version = "1.1.0"
edition = "2021"
authors = ["Erik Simon <hey@eriksimon.dev>"]
repository = "https://github.com/ShooTeX/pngme"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
clap = { version = "4.0.32", features = ["derive"] }
crc = "3.0"
